# salamesh

./: .gitignore  CMakeLists.txt  README.md  api.md  app.cpp  app.h  app_interface.h  arcball_camera.h  args_manager.h  bindings.md  boundaries.h  commands.h  component.h  component_loader.h  debug_tool.cpp  debug_tool.h  descent_camera.h  halfedge_renderer.cpp  halfedge_renderer.h  hex_collapse_tool.cpp  hex_collapse_tool.h  hex_mesh.cpp  hex_mesh.h  hex_model.cpp  hex_model.h  hex_renderer.cpp  hex_renderer.h  lua_console.cpp  lua_console.h  lua_engine.h  lua_script.h  main.cpp  mesh_renderer.cpp  mesh_renderer.h  mesh_shader.h  model.h  my_app.cpp  my_app.h  point_set_renderer.cpp  point_set_renderer.h  (+40 more)
.github/workflows/: continuous.yml
assets/: catorus_hex_attr.geogram  catorus_hex_attr2.geogram  catorus_hex_facet_attr.geogram  catorus_quad.geogram  catorus_tet.geogram  catorus_tri.geogram  catorus_uglify.geogram  degenerated_triangles.geogram  degenerated_triangles_old.geogram  joint.geogram  my_polyline.geogram  polys.geogram  quads.geogram  simple-poly.geogram  simple_poly.geogram
bindings/: app_bindings.cpp  app_bindings.h  camera_bindings.cpp  camera_bindings.h  colormap_bindings.cpp  colormap_bindings.h  fs_bindings.cpp  fs_bindings.h  glm_bindings.cpp  glm_bindings.h  image_bindings.cpp  image_bindings.h  imgui_bindings.cpp  imgui_bindings.h  lua_binding.h  model_bindings.cpp  model_bindings.h  navigation_path_bindings.cpp  navigation_path_bindings.h  renderer_bindings.cpp  renderer_bindings.h  scene_bindings.cpp  scene_bindings.h  snapshot_bindings.cpp  snapshot_bindings.h  um_bindings.cpp  um_bindings.h
bindings/cameras/: camera_bindings.cpp  camera_bindings.h
bindings/data/: colormap_bindings.h  element_bindings.h  image_bindings.h  snapshot_bindings.h
bindings/models/: model_bindings.h
cameras/: arcball_camera.h  arcball_camera2.h  descent_camera.h  trackball_camera.h
core/: CMakeLists.txt  app_interface.h  arcball_camera.h  attribute.h  bbox_renderer.cpp  bbox_renderer.h  camera.h  clipping_renderer.cpp  clipping_renderer.h  color_mode.h  component.h  descent_camera.h  element.h  entity_collection.h  graphic_api.h  halfedge_renderer.cpp  halfedge_renderer.h  halfedge_renderer_2.cpp  halfedge_renderer_2.h  helpers.h  hex_model.cpp  hex_model.h  hex_model_interface.h  hex_renderer.cpp  hex_renderer.h  input_states.h  instanciator.h  layer.h  line_renderer.cpp  line_renderer.h  lua_script.h  material_instance.h  mesh_renderer.h  mesh_shader.h  model.h  model_state.h  module.h  navigation_path.h  point_set_renderer.cpp  point_set_renderer.h  (+46 more)
core/cameras/: arcball_camera.h  camera.h  camera_collection.h  descent_camera.h  trackball_camera.h
core/data/: all.h  attribute.h  colormap.h  geometry.h  geometry_buffer.h  geometry_data.h  geometry_layout.h  image.h  material.h  material_buf.h  snapshot.h
core/models/: hex_model.cpp  hex_model.h  model.cpp  model.h  model_collection.h  model_view.cpp  model_view.h  poly_model.cpp  poly_model.h  polyline_model.h  quad_model.cpp  quad_model.h  surface_model.cpp  surface_model.h  tet_model.cpp  tet_model.h  tri_model.cpp  tri_model.h  volume_model.h
core/renderers/: bbox_material.cpp  bbox_material.h  bbox_renderer.cpp  bbox_renderer.h  clipping_mode.h  clipping_params.h  clipping_renderer.cpp  clipping_renderer.h  edge_style_params.h  halfedge_renderer.cpp  halfedge_renderer.h  hex_renderer.cpp  hex_renderer.h  layer_params.h  light_params.h  line_renderer.cpp  line_renderer.h  material_params.h  mesh_renderer.h  mesh_style_params.h  point_set_renderer.cpp  point_set_renderer.h  point_style_params.h  poly_renderer.cpp  poly_renderer.h  polyline_renderer.cpp  polyline_renderer.h  quad_renderer.cpp  quad_renderer.h  renderer.h  renderer_collection.h  renderer_info.h  renderer_view.h  surface_renderer.cpp  surface_renderer.h  surface_renderer2.cpp  surface_renderer2.h  tet_renderer.cpp  tet_renderer.h  tri_renderer.cpp  (+3 more)
core/renderers/bbox_renderer/: bbox.vert  bbox_renderer.cpp  bbox_renderer.h
core/utils/: logger.h  opengl_helper.h
docker/: docker-compose.yml  docker.sh
docker/arch-build/: Dockerfile
docker/ubuntu-build/: Dockerfile
helpers/: args_manager.h  graphic_api.h  module_loader.h  settings_manager.h
include/: glad.c  stb_include.cpp
include/ImGuiFileDialog-0.6.7/: CMakeLists.txt
include/glad/: glad.h
include/glew/: CMakeLists.txt
include/glfw/: CMakeLists.txt
include/sol/: sol.hpp
module_a_test/: script.lua
module_attribute_viewer/: script.lua
module_b_test/: script.lua
module_triangle_diagnostic/: inverted_triangle_viewer.h  layout_diagnostic.h  triangle_diagnostic_layout.h  triangle_inspector.h  view_component.h
modules/module_a_test/: script.lua
modules/module_attribute_viewer/: script.lua
modules/module_b_test/: script.lua
modules/module_infos/: script.lua
modules/module_inspector/: script.lua
modules/module_menubar/: script.lua
modules/module_mesh_view/: script.lua
modules/module_painting/: script.lua
modules/module_scene/: script.lua
modules/module_snapshots/: script.lua
shaders/: arrow.frag  arrow.vert  bbox.frag  bbox.vert  clipping.frag  clipping.vert  edge.frag  edge.vert  edgebary.frag  edgebary.vert  flat_point.frag  flat_point.vert  gizmo_line.vert  hex.frag  hex.vert  point.frag  point.vert  point2.frag  point2.vert  point_old.vert  poly.vert  poly2.vert  polyline.vert  quad.frag  quad.vert  quads.vert  screen.frag  simple.frag  simple.geom  simple.vert  surface.frag  surface.vert  surface2.vert  tri.frag  tri.vert  volume.frag  volume.vert  wireframe.frag  wireframe.vert
