CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(glew)

SET(GLEW_LIB ${CMAKE_CURRENT_SOURCE_DIR}/lib/Release/x64/glew32.lib)
SET(GLEW_DLL ${CMAKE_CURRENT_SOURCE_DIR}/bin/Release/x64/glew32.dll)

ADD_LIBRARY(${PROJECT_NAME} SHARED IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
	IMPORTED_IMPLIB   ${GLEW_LIB}
	IMPORTED_LOCATION ${GLEW_DLL}
)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)

# ADD_CUSTOM_TARGET(${PROJECT_NAME}_release COMMAND ${CMAKE_COMMAND} -E copy_if_different ${GLEW_DLL} ${PROJECT_BINARY_DIRECTORY}/Release/)
# ADD_CUSTOM_TARGET(${PROJECT_NAME}_debug COMMAND ${CMAKE_COMMAND} -E copy_if_different ${GLEW_DLL} ${PROJECT_BINARY_DIRECTORY}/Debug/)
ADD_DEPENDENCIES(${PROJECT_NAME} ${PROJECT_NAME}_release ${PROJECT_NAME}_debug)