CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(glfw)

SET(GLFW_LIB ${CMAKE_CURRENT_SOURCE_DIR}/lib-vc2022/glfw3.lib)
SET(GLFW_DLL ${CMAKE_CURRENT_SOURCE_DIR}/lib-vc2022/glfw3.dll)

ADD_LIBRARY(${PROJECT_NAME} SHARED IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
	IMPORTED_IMPLIB   ${GLFW_LIB}
	IMPORTED_LOCATION ${GLFW_DLL}
)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)

# ADD_CUSTOM_TARGET(${PROJECT_NAME}_release COMMAND ${CMAKE_COMMAND} -E copy_if_different ${GLFW_DLL} ${PROJECT_BINARY_DIRECTORY}/bin/Release/)
# ADD_CUSTOM_TARGET(${PROJECT_NAME}_debug COMMAND ${CMAKE_COMMAND} -E copy_if_different ${GLFW_DLL} ${PROJECT_BINARY_DIRECTORY}/bin/Debug/)
ADD_DEPENDENCIES(${PROJECT_NAME} ${PROJECT_NAME}_release ${PROJECT_NAME}_debug)
